Various fixes for autocompletion behavior.